# DB4LAW

./: .gitignore  CLAUDE.md  README.md  apply_links.py  check_progress_old.sh  debug_regex.py  fix_supplementary_links.py  fix_supplementary_yaml.py  link_references.py  migrate_to_japanese.py  pyproject.toml  report.json  requirements.txt  targets.yaml  test_fix.py
Vault/.obsidian/: bookmarks.json  community-plugins.json  graph.json  workspace.json
Vault/laws/: index.json
Vault/reports/: link_check_broken.json  link_check_broken.md
data/: class_to_domain.yaml  domain_overrides.yaml
docs/: AMENDMENT_VAULT_DESIGN.md  ISSUE_NONEXISTENT_ARTICLE_LINKS.md  MIGRATION_PLAN.md  TREE_GRAPH_DESIGN.md
scripts/analysis/: apply_links.py
scripts/debug/: debug_ndl.py  demo_v2_edges.py
scripts/migration/: add_amend_law_meta.py  add_law_name_to_articles.py  add_parent_links.py  cleanup_supplementary.py  config.py  fix_constitution_yaml.py  fix_frontmatter.py  fix_id_collision.py  fix_parent_links.py  fix_supplementary_articles.py  generate_amendment_vault.py  migrate_init_to_japanese.py  migrate_to_japanese.py  normalize_frontmatter.py  pending_links.py  relink_amendment_refs.py  relink_pending.py  unlink_amendment_refs.py  update_article_parent.py  update_yaml_fields.py
tests/: test_add_parent_links.py  test_edge_schema.py  test_tier1_parent.py  test_tier1_structure_nodes.py  test_tier2_amendment.py  test_tier2_consistency.py  test_tier2_external_law_scope.py  test_tier2_self_law_reference.py  test_tier2_vault_based.py
tools/: fix_supplementary_articles.py
(+19441 files in other folders)
